allow multiple recognition models in parallel

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -36,17 +36,21 @@
        "\n",
        "### ForensicFace\n",
        "\n",
-       ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
-       ">                    gpu:int=0, extended=True, det_thresh:float=0.5)\n",
+       ">      ForensicFace (models:list[str]=['sepaelv2'], model:str=None,\n",
+       ">                    det_size:int=320, use_gpu:bool=True, gpu:int=0,\n",
+       ">                    concat_embeddings:bool=True, extended=True,\n",
+       ">                    det_thresh:float=0.5)\n",
        "\n",
        "*Class for processing facial images to extract useful features for forensic analysis.*\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
-       "| model | str | sepaelv2 |  |\n",
+       "| models | list | ['sepaelv2'] |  |\n",
+       "| model | str | None |  |\n",
        "| det_size | int | 320 |  |\n",
        "| use_gpu | bool | True |  |\n",
        "| gpu | int | 0 | which GPU to use |\n",
+       "| concat_embeddings | bool | True |  |\n",
        "| extended | bool | True |  |\n",
        "| det_thresh | float | 0.5 |  |"
       ],
@@ -57,17 +61,21 @@
        "\n",
        "### ForensicFace\n",
        "\n",
-       ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
-       ">                    gpu:int=0, extended=True, det_thresh:float=0.5)\n",
+       ">      ForensicFace (models:list[str]=['sepaelv2'], model:str=None,\n",
+       ">                    det_size:int=320, use_gpu:bool=True, gpu:int=0,\n",
+       ">                    concat_embeddings:bool=True, extended=True,\n",
+       ">                    det_thresh:float=0.5)\n",
        "\n",
        "*Class for processing facial images to extract useful features for forensic analysis.*\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
-       "| model | str | sepaelv2 |  |\n",
+       "| models | list | ['sepaelv2'] |  |\n",
+       "| model | str | None |  |\n",
        "| det_size | int | 320 |  |\n",
        "| use_gpu | bool | True |  |\n",
        "| gpu | int | 0 | which GPU to use |\n",
+       "| concat_embeddings | bool | True |  |\n",
        "| extended | bool | True |  |\n",
        "| det_thresh | float | 0.5 |  |"
       ]
@@ -105,7 +113,200 @@
     }
    ],
    "source": [
-    "ff = ForensicFace(use_gpu=True, extended=True, det_thresh=0.5)"
+    "ff = ForensicFace(\n",
+    "    use_gpu=True,\n",
+    "    extended=True,\n",
+    "    det_thresh=0.5,\n",
+    "    models=[\"sepaelv2\", \"sepaelv4\"],\n",
+    "    concat_embeddings=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<onnxruntime.capi.onnxruntime_inference_collection.InferenceSession>,\n",
+       " <onnxruntime.capi.onnxruntime_inference_collection.InferenceSession>]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ff.rec_inference_sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['keypoints', 'ipd', 'embedding', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret = ff.process_image_single_face(\"obama.png\")\n",
+    "ret.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(8,\n",
+       " dict_keys(['keypoints', 'ipd', 'embedding', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
+       " dict_keys(['keypoints', 'ipd', 'embedding', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret = ff.process_image_multiple_faces(\"tela.png\")\n",
+    "len(ret), ret[0].keys(), ret[1].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1024,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret[1][\"embedding\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff = ForensicFace(\n",
+    "    use_gpu=True,\n",
+    "    extended=True,\n",
+    "    det_thresh=0.5,\n",
+    "    models=[\"sepaelv2\"],\n",
+    "    concat_embeddings=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['keypoints', 'ipd', 'embedding', 'bbox', 'det_score', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret = ff.process_image_single_face(\"obama.png\")\n",
+    "ret.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret[\"embedding\"].shape"
    ]
   },
   {
@@ -361,7 +562,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L433){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L502){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -380,7 +581,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L433){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L502){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -449,7 +650,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L455){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L525){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -473,7 +674,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L455){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L525){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -517,7 +718,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L483){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L553){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -539,7 +740,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L483){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L553){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -637,7 +838,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L555){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L625){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
@@ -670,7 +871,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L555){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L625){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
@@ -797,7 +998,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L655){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L725){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.process_aligned_face_image\n",
        "\n",
@@ -806,7 +1007,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L655){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L725){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.process_aligned_face_image\n",
        "\n",
@@ -846,7 +1047,7 @@
     }
    ],
    "source": [
-    "ff = ForensicFace(extended=True)"
+    "ff = ForensicFace(extended=True, models=[\"sepaelv2\", \"sepaelv4\"])"
    ]
   },
   {
@@ -855,7 +1056,17 @@
    "metadata": {
     "language": "python"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    }
+   ],
    "source": [
     "ret = ff.process_image_single_face(\"obama.png\")\n",
     "ret2 = ff.process_aligned_face_image(ret[\"aligned_face\"])"
